# dsp_library

./: CMakeLists.txt  build.sh
gui/: CMakeLists.txt  SineWavePlot.cpp  SineWavePlot.hpp  SineWaveViewer.cpp  SineWaveViewer.hpp  main.cpp
include/dsp/core/: DynamicArrayBackend.hpp  Signal.hpp  StorageBackend.hpp  VectorBackend.hpp
include/dsp/ds/: DynamicArray.hpp
include/dsp/dsp/dsp/: NyquistValidator.hpp  SignalGenerator.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: signal_test.cpp  test_signal_bridge.cpp
tests/ds/: dynamic_array_test.cpp
tests/dsp/: nyquist_validator_test.cpp  signal_generator_test.cpp
